...
      ),
      body: Column(
        children: <Widget>[
          Padding(
            padding: const EdgeInsets.all(8),
            child: TextField(
              key: Key("itemName"),
              controller: _textEditingControllerTitle,
              keyboardType: TextInputType.text,
              maxLength: 30,
              decoration: InputDecoration(
                  icon: Icon(Icons.border_color),
                  labelText: "Nome do item",
...
                  icon: Icon(Icons.border_color),
                  labelText: "Observação",
                  hintText: "Pegar os mais tostados."),
            ),
          ),
          RaisedButton(
            child: Text("Salvar"),
            textColor: Colors.white,
            onPressed: () {
              final String _description =
                  _textEditingControllerDescription.text;
              final String _title = _textEditingControllerTitle.text;
              if (_title != null && _title.isNotEmpty) {
...
